--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,3 +29,8 @@ a[href*="example"] {
 .destaque {
     background-color: yellow;
 }
+
+#rodape {
+    background-color: black;
+    color: white;
+}
